api 7.1, minecraft 1.18.2, move component to body